fix(style): show y-axis page scrollbar always

--- a/assets/scss/partials/base.scss
+++ b/assets/scss/partials/base.scss
@@ -1,6 +1,6 @@
 html {
     font-size: 62.5%;
-    font-display: swap;
+    overflow-y: scroll;
 }
 
 * {
